--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,12 @@ on:
     push:
         branches: [main]
 
+    pull_request:
+        branches: [main]
+
+    workflow_dispatch:
+
+
 jobs:
     build:
         runs-on: ubuntu-latest
